bake settings logged command different from the actual command #53273

Closed
opened 2017-11-09 05:44:49 +01:00 by sreenivas alapati · 8 comments

System Information
Screen Shot 2017-11-09 at 10.11.56 AM.png

Blender Version
Broken: (v2.79)
Worked: (optional)

Short description of error
When changing the bake settings i.e, enable/remove diffuse. The log in the info panel is different from the actual command. As mentioned here this seems like a minor bug.
Screen Shot 2017-11-09 at 8.43.34 AM.png

Exact steps for others to reproduce the error
Just enable / disable the diffuse/glossy options in the bake settings.
The log shows this bpy.context.scene.use_pass_diffuse = False as the command.
But, the actual one is this bpy.context.scene.render.bake.use_pass_diffuse = False

Let me know if any more info is needed.
Thanks! ?

**System Information** ![Screen Shot 2017-11-09 at 10.11.56 AM.png](https://archive.blender.org/developer/F1110283/Screen_Shot_2017-11-09_at_10.11.56_AM.png) **Blender Version** Broken: (v2.79) Worked: (optional) **Short description of error** When changing the bake settings i.e, enable/remove diffuse. The log in the info panel is different from the actual command. As mentioned [here ](https://blender.stackexchange.com/questions/93985/bake-settings-logged-command-different-from-the-actual-command) this seems like a minor bug. ![Screen Shot 2017-11-09 at 8.43.34 AM.png](https://archive.blender.org/developer/F1110286/Screen_Shot_2017-11-09_at_8.43.34_AM.png) **Exact steps for others to reproduce the error** Just enable / disable the diffuse/glossy options in the bake settings. The log shows this `bpy.context.scene.use_pass_diffuse = False` as the command. But, the actual one is this `bpy.context.scene.render.bake.use_pass_diffuse = False` Let me know if any more info is needed. Thanks! ?

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @sreenivas

Added subscriber: @sreenivas

If its a minor work and suitable for first-timers. If you guys can provide me some help, I would be more than happy to work on it ?

If its a minor work and suitable for first-timers. If you guys can provide me some help, I would be more than happy to work on it ?

This issue was referenced by ebcb880375

This issue was referenced by ebcb88037581a28a776bca98618d780ea1997301

Added subscriber: @brecht

Added subscriber: @brecht

Fixing is faster than explaining how to fix it, so I went and ahead and committed.

Fixing is faster than explaining how to fix it, so I went and ahead and committed.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Sweet! Thanks bretch! ?

Sweet! Thanks bretch! ?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53273
No description provided.