Fix T53273: render bake settings properties not showing correct Python path.