source/blender/makesrna/intern/rna_scene.c
@@ -990,6 +990,11 @@ static char *rna_RenderSettings_path(PointerRNA *UNUSED(ptr))
 	return BLI_sprintfN("render");
 }
 
+static char *rna_BakeSettings_path(PointerRNA *UNUSED(ptr))
+{
+	return BLI_sprintfN("render.bake");
+}
+
 static char *rna_ImageFormatSettings_path(PointerRNA *ptr)
 {
 	ImageFormatData *imf = (ImageFormatData *)ptr->data;
@@ -4244,6 +4249,7 @@ static void rna_def_bake_data(BlenderRNA *brna)
 	RNA_def_struct_sdna(srna, "BakeData");
 	RNA_def_struct_nested(brna, srna, "RenderSettings");
 	RNA_def_struct_ui_text(srna, "Bake Data", "Bake data for a Scene data-block");
+	RNA_def_struct_path_func(srna, "rna_BakeSettings_path");
 
 	prop = RNA_def_property(srna, "cage_object", PROP_STRING, PROP_NONE);
 	RNA_def_property_string_sdna(prop, NULL, "cage");
